tests/ui/privacy/associated-item-privacy-trait.stderr
error: type `for<'a> fn(&'a priv_trait::Pub) {<priv_trait::Pub as PrivTr>::method}` is private
  --> $DIR/associated-item-privacy-trait.rs:15:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PrivTr>::method;
   | |                     ^^^^^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |         value;
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac!`
...
LL |       priv_trait::mac!();
   |       ------------------ in this macro invocation

error: type `for<'a> fn(&'a priv_trait::Pub) {<priv_trait::Pub as PrivTr>::method}` is private
  --> $DIR/associated-item-privacy-trait.rs:17:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PrivTr>::method;
LL | |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac!`
...
LL |       priv_trait::mac!();
   |       ------------------ in this macro invocation

error: type `for<'a> fn(&'a Self) {<Self as PrivTr>::method}` is private
  --> $DIR/associated-item-privacy-trait.rs:19:13
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PrivTr>::method;
LL | |
LL | |         value;
LL | |
LL | |         Pub.method();
   | |             ^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac!`
...
LL |       priv_trait::mac!();
   |       ------------------ in this macro invocation

error: associated constant `PrivTr::CONST` is private
  --> $DIR/associated-item-privacy-trait.rs:21:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PrivTr>::method;
LL | |
LL | |         value;
...  |
LL | |         <Pub as PrivTr>::CONST;
   | |         ^^^^^^^^^^^^^^^^^^^^^^ private associated constant
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac!`
...
LL |       priv_trait::mac!();
   |       ------------------ in this macro invocation

error: associated type `PrivTr::AssocTy` is private
  --> $DIR/associated-item-privacy-trait.rs:23:16
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PrivTr>::method;
LL | |
LL | |         value;
...  |
LL | |         let _: <Pub as PrivTr>::AssocTy;
   | |                ^^^^^^^^^^^^^^^^^^^^^^^^ private associated type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac!`
...
LL |       priv_trait::mac!();
   |       ------------------ in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-trait.rs:25:34
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PrivTr>::method;
LL | |
LL | |         value;
...  |
LL | |         pub type InSignatureTy = <Pub as PrivTr>::AssocTy;
   | |                                  ^^^^^^^^^^^^^^^^^^^^^^^^ private trait
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac!`
...
LL |       priv_trait::mac!();
   |       ------------------ in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-trait.rs:27:34
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PrivTr>::method;
LL | |
LL | |         value;
...  |
LL | |         pub trait InSignatureTr: PrivTr {}
   | |                                  ^^^^^^ private trait
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac!`
...
LL |       priv_trait::mac!();
   |       ------------------ in this macro invocation

error: trait `PrivTr` is private
  --> $DIR/associated-item-privacy-trait.rs:29:14
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PrivTr>::method;
LL | |
LL | |         value;
...  |
LL | |         impl PrivTr for u8 {}
   | |              ^^^^^^ private trait
LL | |
LL | |     }
   | |_____- in this expansion of `priv_trait::mac!`
...
LL |       priv_trait::mac!();
   |       ------------------ in this macro invocation

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:46:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
   | |                     ^^^^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |         value;
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_signature::mac!`
...
LL |       priv_signature::mac!();
   |       ---------------------- in this macro invocation

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:48:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_signature::mac!`
...
LL |       priv_signature::mac!();
   |       ---------------------- in this macro invocation

error: type `priv_signature::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:50:13
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
LL | |
LL | |         Pub.method(loop {});
   | |             ^^^^^^ private type
LL | |
LL | |     }
   | |_____- in this expansion of `priv_signature::mac!`
...
LL |       priv_signature::mac!();
   |       ---------------------- in this macro invocation

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:67:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method::<Priv>;
   | |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |         value;
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_substs::mac!`
...
LL |       priv_substs::mac!();
   |       ------------------- in this macro invocation

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:69:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method::<Priv>;
LL | |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_substs::mac!`
...
LL |       priv_substs::mac!();
   |       ------------------- in this macro invocation

error: type `priv_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:71:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method::<Priv>;
LL | |
LL | |         value;
LL | |
LL | |         Pub.method::<Priv>();
   | |         ^^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |     }
   | |_____- in this expansion of `priv_substs::mac!`
...
LL |       priv_substs::mac!();
   |       ------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:91:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
   | |                     ^^^^^^^^^^^^^^^^^^^^^^ private type
LL | |
LL | |         value;
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:93:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:95:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
LL | |
LL | |         let value = <Pub as PubTr<_>>::method;
   | |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:97:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:99:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         Pub.method();
   | |         ^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:102:21
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         let value = <Priv as PubTr<_>>::method;
   | |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:104:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         value;
   | |         ^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:106:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         Priv.method();
   | |         ^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:109:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         <Pub as PubTr>::CONST;
   | |         ^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:111:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         <Pub as PubTr<_>>::CONST;
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:113:9
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         <Priv as PubTr<_>>::CONST;
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:117:30
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         let _: <Pub as PubTr<_>>::AssocTy;
   | |                              ^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:119:17
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         let _: <Priv as PubTr<_>>::AssocTy;
   | |                 ^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:122:35
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         pub type InSignatureTy1 = <Pub as PubTr>::AssocTy;
   | |                                   ^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:124:35
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         pub type InSignatureTy2 = <Priv as PubTr<Pub>>::AssocTy;
   | |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private type
...  |
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-trait.rs:126:14
   |
LL | /     pub macro mac() {
LL | |         let value = <Pub as PubTr>::method;
LL | |
LL | |         value;
...  |
LL | |         impl PubTr for u8 {}
   | |              ^^^^^ private type
LL | |
LL | |     }
   | |_____- in this expansion of `priv_parent_substs::mac!`
...
LL |       priv_parent_substs::mac!();
   |       -------------------------- in this macro invocation

error: aborting due to 30 previous errors

